[package]
name = "premium-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.23.0"
thiserror = "1.0.40"
anyhow = "1.0.71"
tide = "0.16.0"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0"
async-std = { version = "1.6.5", features = ["unstable", "attributes"] }
log = "0.4.19"
env_logger = "0.10.0"
tokio = { version = "1.29.0" , features = ["full"]}
validator = { version = "0.16.1"}

